# patchmasta

./: .gitignore  directory_structure.txt  main.py  pyproject.toml  requirements.txt
ai/: controller.py  llm.py  tools.py
audio/: engine.py
core/: chat_db.py  config.py  logger.py  theme.py
docs/: build.md  run.md  test.md
midi/: device.py  effects.py  params.py  player.py  sysex.py  sysex_buffer.py
model/: bank.py  library.py  patch.py
patches/: arp_1oct.rk100s2_prog  arp_4oct.rk100s2_prog  arp_keysync.rk100s2_prog  arp_keysync_off.rk100s2_prog  arp_last4.rk100s2_prog  arp_last4_v2.rk100s2_prog  arp_latch_on.rk100s2_prog  arp_oct2.rk100s2_prog  arp_oct2_v2.rk100s2_prog  arp_octave2.rk100s2_prog  arp_on.rk100s2_prog  arp_res_qtr.rk100s2_prog  arp_step1_off.rk100s2_prog  arp_step3off.rk100s2_prog  arp_swing64.rk100s2_prog  arp_timbre2.rk100s2_prog  arp_timbre2_v2.rk100s2_prog  arp_type_down.rk100s2_prog  arp_type_down2.rk100s2_prog  arpon.rk100s2_prog  arpon_octave2.rk100s2_prog  arpon_octave3.rk100s2_prog  arpon_octave4.rk100s2_prog  fx1_ribbon_drywet.rk100s2_prog  fx1_ribbon_off.rk100s2_prog  fx1_ribbon_reverse.rk100s2_prog  fx2_compressor.rk100s2_prog  fx2_ribbon_drywet.rk100s2_prog  fx2_ribbon_rev.rk100s2_prog  fx_compressor.rk100s2_prog  fx_off.rk100s2_prog  fx_types.rk100s2_prog  lr_filter.rk100s2_prog  lr_pitch2.rk100s2_prog  lr_range2.rk100s2_prog  lr_scalekey.rk100s2_prog  lr_scaletype.rk100s2_prog  lr_timbre2.rk100s2_prog  lr_timbreboth.rk100s2_prog  sr_cc64.rk100s2_prog  (+2 more)
scripts/: git.sh  setup.sh  test.sh
tools/: compute_offsets.py  file_format.py  (+5 more)
(+48 files in other folders)
