[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patchmasta"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "python-rtmidi>=1.5.8",
    "anthropic>=0.40.0",
    "groq>=0.12.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.scripts]
patchmasta = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["core", "midi", "model", "ui", "ai", "audio", "tools"]
